address width of fieldset overflow issue

--- a/packages/js/product-editor/src/blocks/product-fields/summary/editor.scss
+++ b/packages/js/product-editor/src/blocks/product-fields/summary/editor.scss
@@ -3,10 +3,6 @@
 		margin-top: 0;
 		margin-bottom: 0;
 	}
-
-	@include breakpoint(">782px") {
-		max-width: 650px;
-	}
 }
 
 .components-summary-control {
